XSCOLIBRI-225: Add submenu is 4px too high from other submenus One more improvement which fixes an extra pixel visible in Chrome.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk/colibri@31422 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
+++ b/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
@@ -929,6 +929,7 @@ div#xwikiobjects input[type="checkbox"], div#xwikiclassproperties input[type="ch
   cursor: default;
   display: block;
   float: left;
+  height: 1.6em;
   margin-right: 5px;
   min-height: 22px;
 }
@@ -962,8 +963,8 @@ div#xwikiobjects input[type="checkbox"], div#xwikiclassproperties input[type="ch
 
 .menuarrow {
   color: $theme.menuLinkColor;
-  font-size: 8px;
-  line-height: 22px;
+  font-size: .8em;
+  line-height: 1.9em;
   margin-right: 10px;
 }
 
